WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117942
Don't create Document's selector query cache just to invalidate it.
https://bugs.webkit.org/show_bug.cgi?id=117942
Summary
Don't create Document's selector query cache just to invalidate it.
Andreas Kling
Reported
2013-06-24 13:16:47 PDT
Don't create Document's selector query cache just to invalidate it.
Attachments
Patch
(1.82 KB, patch)
2013-06-24 13:17 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-06-24 13:17:45 PDT
Created
attachment 205320
[details]
Patch
WebKit Commit Bot
Comment 2
2013-06-24 13:52:54 PDT
Comment on
attachment 205320
[details]
Patch Clearing flags on attachment: 205320 Committed
r151925
: <
http://trac.webkit.org/changeset/151925
>
WebKit Commit Bot
Comment 3
2013-06-24 13:52:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug