Don't create Document's selector query cache just to invalidate it. <http://webkit.org/b/117942>

Reviewed by Anders Carlsson.

If Document::m_selectorQueryCache is null, there's nothing to invalidate,
so don't go through the trouble of creating a query cache.

* dom/Document.cpp:
(WebCore::Document::setCompatibilityMode):
(WebCore::Document::updateBaseURL):


Canonical link: https://commits.webkit.org/136073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151925 268f45cc-cd09-0410-ab3c-d52691b4dbfc